<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/section_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:text="Register">

            <TextView
                android:id="@+id/section_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="01"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/section_crn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12345"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/section_prof_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="INSTRUCTOR"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="113dp" />

            <TextView
                android:id="@+id/section_professor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Juliano Franz"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/section_enrolled_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="ENROLLED"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="24dp"
                        tools:layout_editor_absoluteY="113dp" />

                    <TextView
                        android:id="@+id/section_enrolled"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/section_capacity_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="CAPACITY"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="24dp"
                        tools:layout_editor_absoluteY="113dp" />

                    <TextView
                        android:id="@+id/section_capacity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="30"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/section_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="TIMES"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="113dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/section_times_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager">

            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/register_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Register" />

            <Button
                android:id="@+id/drop_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Drop" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
