...
                android:text="@string/sections_title"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="113dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/sections_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="77dp"
                tools:layout_editor_absoluteY="416dp" />

        </LinearLayout>
...
