...
    <string name="term_semester">Winter</string>
    <string name="term_year">2018</string>

    <string name="action_more">more</string>
    <string name="action_menu">menu</string>
    <string name="tab_text_1">Courses</string>
    <string name="tab_text_2">Schedule</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Log Out</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="logout_name">Log Out</string>

...
