...
                    android:textAlignment="viewEnd" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/schedule_tab">

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
